Fixed alignment issue on drivers and news.

--- a/content/assets/css/dhub.css
+++ b/content/assets/css/dhub.css
@@ -197,7 +197,7 @@ td{
   float: right;
   border-radius: 22px;
   background-color: var(--secondarywhite);
-  height: 785px;
+  height: 787px;
   min-width: 32.2%;
   color: var(--black);
   box-shadow: #222222;
